--- a/rm/index.html
+++ b/rm/index.html
@@ -32,18 +32,27 @@
                 <div>Cards</div>
             </div>
             <div class="tabs">
-                <a href="javascript:void(0)" onclick="openTabContent(event, 'products');">
+                <!-- <a href="javascript:void(0)" onclick="openTabContent(event, 'products');">
                     <div class="tablink " id="tab__products">All products</div>
-                </a>
-                <a href="javascript:void(0)" onclick="openTabContent(event, 'ideas');">
+                </a> -->
+                <div class="tablink " id="tab__products" onclick="openTabContent(event, 'products');">
+                    <a href="javascript:void(0)" >All products</a>
+                </div>
+                <div class="tablink " id="tab__products" onclick="openTabContent(event, 'ideas');">
+                    <a href="javascript:void(0)" >All Ideas</a>
+                </div>
+                <div class="tablink " id="tab__products" onclick="openTabContent(event, 'clients');">
+                    <a href="javascript:void(0)" >All Clients</a>
+                </div>
+                <!-- <a href="javascript:void(0)" onclick="openTabContent(event, 'ideas');">
                     <div class="tablink " id="tab__ideas">All ideas</div>
-                </a>
-                <a href="javascript:void(0)" onclick="openTabContent(event, 'clients');">
+                </a> -->
+                <!-- <a href="javascript:void(0)" onclick="openTabContent(event, 'clients');">
                     <div class="tablink " id="tab__clients">Clients</div>
-                </a>
+                </a> -->
             </div>
             <!-- content display for all products -->
-            <div id="products" class="tab__content" style="display: n;">
+            <div id="products" class="tab__content" style="display: one;">
                 <div class="searchbar">
                     <input type="text">
                     <button class="filter">Filter</button>
@@ -204,8 +213,9 @@
                                     <button id="filter-client">Suggested to Clients (2)</button>
                                     <!-- <button id="rec-to-client">Recommend to Clients</button> -->
                                 </div>
-                        </div>
+                            </div>
                       
+                        </div>
                     </div>
                 </div>
                 <div class="navigation">
@@ -214,9 +224,7 @@
             </div>
             <!-- content display for all ideas -->
             <div id="ideas" class="tab__content" style="display: none;">
-                <ideas-pro></ideas-project>
                 <ideas-pro></ideas-pro>
-
             </div>
             <!-- content display for all registered clients -->
             <div id="clients" class="tab__content" style="display: none;">
@@ -229,10 +237,10 @@
 
 
 
-    <!-- Javascript files -->
     <script src="./script.js" type="text/javascript"></script>
-    <script src="./products.js" type="text/javascript"></script>
-    <script src="./ideas/ideas.js" type="text/javascript"></script>
-    <script src="./clients/clients.js"></script>
+    <script type="text/javascript" src="./clients/clients.js"></script>
+    <!-- Javascript files -->
+    <!-- <script src="./products.js" type="text/javascript"></script> -->
+    <!-- <script src="./ideas/ideas.js" type="text/javascript"></script> -->
 </body>
 </html>
