--- a/rm/index.html
+++ b/rm/index.html
@@ -231,6 +231,7 @@
     <!-- Javascript files -->
     <script src="./script.js" type="text/javascript"></script>
     <script type="text/javascript" src="./clients/clients.js"></script>
+    <script type="text/javascript" src="../data.js"></script>
     <!-- <script src="./products.js" type="text/javascript"></script> -->
     <!-- <script src="./ideas/ideas.js" type="text/javascript"></script> -->
 </body>
