--- a/rm/ideas/ideas.html
+++ b/rm/ideas/ideas.html
@@ -104,7 +104,7 @@
       </div>
       <div class="form-group">
         <label for="risk-level">Risk Level:</label>
-        <select id= "risk-level" name="RiskLevel">
+        <select id= "risk-level" name="RiskLevel" onchange="performIt()">
           <option value="" disabled selected>-- Select a Risk Level --</option>
           <option value="1">1</option>
           <option value="2">2</option>
@@ -144,7 +144,7 @@
       <div class ="form-group">
       <label for="region">Region:</label>
       <select id="region" name="Region">
-        <option value="">-- Select a Region --</option>
+        <option value="" disabled selected>-- Select a Region --</option>
         <option value="North America">North America</option>
         <option value="South America">South America</option>
         <option value="Europe">Europe</option>
@@ -155,7 +155,7 @@
       <div class="form-group">
         <label for="country">Country:</label>
         <select id="country" name="Country">
-          <option value="">-- Select a Country --</option>
+          <option value="" disabled selected>-- Select a Country --</option>
           <option value="United States">United States</option>
           <option value="Nigeria">Nigeria</option>
           <option value="Algeria">Algeria</option>
@@ -187,5 +187,11 @@
     </form>
   </div>
     <!-- <script src="./ideas.js"></script> -->
+
+    <script>
+        function performIt(){
+            console.log("YUYYY")
+        }
+    </script>
 </body>
 </html>
