Match Clients to product based on preferences

--- a/rm/index.html
+++ b/rm/index.html
@@ -73,11 +73,11 @@
                     </div> -->
                     <created-investment-cards class="cards"></created-investment-cards>
                     <!-- View product page -->
-                    <div id="myModal" class="modal">
+                    <!-- <div id="myModal" class="modal"> -->
 
                         <!-- Modal content -->
-                        <div class="modal-content product-details">
-                            <span class="close">&times;</span>
+                        <!-- <div class="modal-content product-details"> -->
+                            <!-- <span class="close">&times;</span> -->
                             <!-- <div class="product-details-r1" style="display: flex;">
                                 <div class="product-details-tag" style="display: flex;">
                                     <div class="product-details-logo"><p >IBM</p></div>
@@ -181,8 +181,8 @@
                                 </div>
                             </div> -->
                       
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </div>
                 <div class="navigation">
                     <button>Previous</button> 1 <button>Next</button>
