Revamp Idea creation page

--- a/fa/index.html
+++ b/fa/index.html
@@ -27,7 +27,7 @@
         <div class="main">
             <div>
                 <h2>FA IDEAS DASHBOARD</h2>  
-                <button><a href="./form.html">Create Ideas</a></button>
+                <button><a href="./createIdea.php">Create Ideas</a></button>
             </div>
             <div>
                 <!-- <button><a href="">All ideas</a></button> -->
@@ -54,7 +54,7 @@
                     <tr>
                         <th>Date created</th>
                         <th>Instrument Name</th>
-                        <th>Asset Type</th>
+                        <th>Product Type</th>
                         <th>Industry</th>
                         <th>Risk Level</th>
                         <th>Currency</th>
