Make modifications to FA and RM codes

--- a/rm/index.html
+++ b/rm/index.html
@@ -205,7 +205,7 @@
 
     <!-- Javascript files -->
     <script src="./script.js" type="text/javascript"></script>
-    <script type="text/javascript" src="./clients/clients.js"></script>
+    <!-- <script type="text/javascript" src="./clients/clients.js"></script> -->
     <!-- <script type="text/javascript" src="../data.js"></script> -->
 </body>
 </html>
