--- a/clients/front_end/signup.html
+++ b/clients/front_end/signup.html
@@ -70,23 +70,23 @@
             <h2 id="form-directive">Sign Up</h2>
             <p id="form-guide">Please fill in this form to create an account.</p>
             <label for="fname" class="fname"><b>First name</b>:</label>
-            <input type="text" id="fname" name="fname"><br><br>
+            <input type="text" id="fname" name="fname" placeholder="Enter your first name." required><br><br>
             <label for="lname"><b>Last name:</b></label>
-            <input type="text" id="lname" name="lname" ><br><br>
+            <span> <input type="text" id="lname" name="lname" placeholder="Enter your last name." required><br><br></span>
             <label for="email"><b>Email:</b></label>
-            <input type="text" id="email" placeholder="Enter Email" name="email" ><br><br>
+            <input type="email" id="email" name="email" placeholder="Valid email required." required><br><br>
             <label for="password"><b>Password:</b></label>
-            <input type="password" id="password" placeholder="Enter Password" name="password" ><br><br>
+            <input type="password" id="password" name="password" placeholder="Minimum 8 characters." minlength="8" required><br><br>
             <label for="password_rpt"><b>Confirm Password:</b></label>
-            <input type="password" id="password_rpt"placeholder="Confirm Password" name="password_rpt" ><br><br>
+            <input type="password" id="password_rpt" name="password_rpt" placeholder="Must match password." minlength="8" required><br><br>
             <span>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</span>
             <div class="button-wrapper">
                 <!-- Submit button for the form -->
-                <button type="submit" id="signupbtn" value="submit">Sign Up</a></b></button>
+                <button type="submit" id="signupbtn" value="submit">Create your account.</button>
             </div>
             <div class="button-wrapper">
                 <!-- Button to redirect to the login page -->
-                <button><a href="http://localhost/wealth_affairs/clients/front_end/login.php">Already Registered User? Click here to login</a></button>
+                <p>Already a registered user? <button type="button" onclick="location.href='../front_end/login.php'" class="login-btn">Log in instead.</button></p>
             </div>
             <!-- CSS styling for the buttons -->
             <style>
