--- a/fa/index.html
+++ b/fa/index.html
@@ -15,10 +15,10 @@
                 <p class="name">Francis, O. A</p>
                 <p class="title">Funds Administrator</p>
             </div>
-            <div class="">
+            <!-- <div class="">
                 <p><a href="">Dashboard</a></p>
                 <p><a href="">Profile</a></p>
-            </div>
+            </div> -->
             <div class="logout">
                 <button>Logout</button>
                 <p><a href="../index.html">Go to homepage</a></p>
