--- a/auth/login.html
+++ b/auth/login.html
@@ -14,15 +14,11 @@
     </form>
     </div>
 
-
-
-
-
-    <script>
+    <!-- <script>
         // Redirect to error page if javascript is not enabled
         if (!navigator.cookieEnabled){
             window.location.href = 'error.html';
         }
-    </script>
+    </script> -->
 </body>
 </html>
